<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Add a row -->
    <item
        android:id="@+id/top_level_table_menu_add"
        android:icon="@drawable/content_new"
        android:title="@string/add_row"
        android:showAsAction="always" />
    
    <!-- Select a view -->
    <item
        android:id="@+id/top_level_table_menu_select_view"
        android:icon="@drawable/view"
        android:title="@string/select_view"
        android:showAsAction="always" >
        
        <!-- View submenu -->
        <menu>
            <group android:checkableBehavior="single">
	            <item
	                android:id="@+id/top_level_table_menu_view_spreadsheet_view"
	                android:title="@string/spreadsheet" />
	            <item
	                android:id="@+id/top_level_table_menu_view_list_view"
	                android:title="@string/list" />
	            <item
	                android:id="@+id/top_level_table_menu_view_graph_view"
	                android:title="@string/graph" />
	            <item
	                android:id="@+id/top_level_table_menu_view_map_view"
	                android:title="@string/map" />
            </group>
        </menu>
    </item>
    
    <!-- Preferences sub menu -->
    <item
        android:id="@+id/top_level_table_menu_select_preferences"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/preferences"
        android:showAsAction="always">
        
        <!-- Preferences submenu -->
        <menu>
            <item
                android:id="@+id/top_level_table_menu_table_properties"
                android:title="@string/table_properties" />
            <item
                android:id="@+id/top_level_table_menu_manage_property_sets"
                android:title="@string/manage_table_property_sets" />            
        </menu>
        
    </item>
    

</menu>
