<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <EditTextPreference
        android:key="column_pref_display_name"
        android:title="@string/display_name"
        android:persistent="false"
        android:selectable="false"
        android:enabled="false" />
    
    <EditTextPreference
        android:key="column_pref_element_key"
        android:title="@string/element_key"
        android:persistent="false"
        android:selectable="false"
        android:enabled="false" />
    
    <EditTextPreference 
        android:key="column_pref_element_name"
        android:title="@string/element_name"
        android:persistent="false"
        android:selectable="false"
        android:enabled="false" />
    
    <EditTextPreference 
        android:key="column_pref_column_type"
        android:title="@string/column_type"
        android:persistent="false"
        android:selectable="false"
        android:enabled="false" />
    
    <EditTextPreference
        android:key="column_pref_column_width"
        android:title="@string/column_width"
        android:numeric="integer"
        android:inputType="number"
        android:persistent="false" />
    
    <Preference
        android:key="column_pref_color_rules"
        android:title="@string/edit_color_rules"
        android:persistent="false" />

</PreferenceScreen>
