<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Display and change the user-defined name of the list view. -->
    <org.opendatakit.tables.preferences.EditNameDialogPreference
        android:key="graphview_name"
        android:title="@string/user_defined_graphview_name_label"
        android:dialogLayout="@layout/edit_graphview_name_dialog"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel" />
    <!-- Display and select a file for that list view. -->
    <org.opendatakit.tables.preferences.EditNameDialogPreference
        android:key="graphview_type"
        android:title="@string/app_defined_graphtype_label"
        android:dialogLayout="@layout/edit_graphview_name_dialog"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel" />    

</PreferenceScreen>